Math 648 going live

--- a/index.html
+++ b/index.html
@@ -175,6 +175,19 @@
   <!---------------------------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
+   <b><FONT SIZE=+1 color=brown>Winter 2026</font></b>
+   <table border=0>
+   <!---------------------------------------------------------------------------------------------------->
+    <tr valign=top><td><font color=brown>MATH 648</font>&nbsp;</td>
+      <td><a href="teaching/26.1/648.html">Computational Algebraic Geometry</a></td>
+      <td colspan=1> Tu-Th </td><td> 15:55&ndash;17:10</td><td> Blocker 121
+      </td>
+    </tr>
+   <!---------------------------------------------------------------------------------------------------->
+   </table>
+  <!---------------------------------------------------------------------------------------------------->
+  <hr>
+  <!---------------------------------------------------------------------------------------------------->
    <b><FONT SIZE=+1 color=brown>Fall 2025</font></b>
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
@@ -246,8 +259,7 @@
    </tr>
     <tr>
      <td></td>
-     <td>
-      <a href="http://www.math.tamu.edu/seminars/geometry/"></a>Geometry
+      <td><a href="https://tamu-seminar.github.io/geometry/">Geometry</a> 
      </td>
      <td></td>
      <td> Fridays 4:00&ndash;5:00&nbsp;
