--- a/advising/index.html
+++ b/advising/index.html
@@ -247,7 +247,7 @@
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
   <li>
-      <A HREF=""></a>Danile Dale, 2025&ndash;
+      <A HREF=""></a>Daniel Dale, 2025&ndash;
   </li>
  <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
