--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -107,7 +107,7 @@ I have had the good fortune to work with the following mathematicians.
 
 <!--  Schubert Ideals  -->
 <dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, Texas A&amp;M University.
+    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, Bringham Young University.
 
 
 <!--  quot 2008  -->  
@@ -166,7 +166,13 @@ I have had the good fortune to work with the following mathematicians.
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="http://www.math.wisc.edu/~craciun/">Gheorghe Craciun</A>, University of Wisconsin, Madison.
 
-<!-- 4triangles 2007 -->
+
+<!--  Schubert Ideals  -->
+<dd><IMG SRC="images/dots/vapourware.png">
+    <A HREF="https://cbott2.github.io/"></a>Daniel Dale, Texas A&amp;M University.
+
+
+ <!-- 4triangles 2007 -->
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="http://www-sop.inria.fr/prisme/personnel/devillers/">Olivier
          Devillers</A>, INRIA, Sophia-Antipholos, France. 
@@ -182,8 +188,13 @@ I have had the good fortune to work with the following mathematicians.
   
 <!-- SqCert 2019 -->
 <dd><IMG SRC="images/dots/one.png">
-   <A HREF="http://people.math.gatech.edu/~tduff3/">Timothy Duff</A>,
-     Georgia Tech.
+   <A HREF="https://timduff35.github.io/timduff35/">Timothy Duff</A>,
+     University of Missouri.
+
+<!--   -->
+<dd><IMG SRC="images/dots/vapourware.png">
+    <A HREF="https://cbott2.github.io/"></a>Somak Dutta, Texas A&amp;M University.
+
 
   <!--  ATV 2013 -->
 <dd><IMG SRC="images/dots/one.png">
@@ -588,7 +599,7 @@ I have had the good fortune to work with the following mathematicians.
 
 <!--  Increasing 2025 -->
 <dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF="http://www.math.uiuc.edu/~ayong/"></a>Tuanyi Yu, UQAM.
+    <A HREF="http://www.math.uiuc.edu/~ayong/"></a>Tianyi Yu, UQAM.
 
 <!-- Mod4 2012  Newmodfour 2014  Injectivity 2017  GenWronski 2020 -->
 <dd><IMG SRC="images/dots/four.png">
