--- a/service.html
+++ b/service.html
@@ -99,7 +99,8 @@
      <A HREF="http://www.maa.org/publications/periodicals/american-mathematical-monthly"><IMG
       SRC="images/amm_2014.jpg" BORDER=2  height=130pt ALT="American Mathematical Monthly" ></A> 
         <A HREF="https://armj.math.stonybrook.edu/"><IMG
-      SRC="images/arnold_24.webp" BORDER=2 height=130 ALT="Arnold Mathematical Journal" ></A> 
+      SRC="images/arnold_24.webp" BORDER=2 height=130 ALT="Arnold Mathematical Journal"></A> 
+     <A HREF="https://link.springer.com/journal/10208"><IMG SRC="images/FoCM_25.webp" BORDER=2 height=130 ALT="Journal of the Foundations of Computational Mathematics"></A> 
   </td>
   <TD rowspan=2 align=left>
     <table>
@@ -148,15 +149,20 @@
      <A  HREF="https://armj.math.stonybrook.edu/">Arnold Mathematical Journal</a>.
   </li>
   <!--------------------------------------------------------->
+  <li>
+     Editorial Board, 
+     <A  HREF="https://focm-society.org/journal.php">Journal of the Foundations of Computational Mathematics</a>.
+  </li>
+  <!--------------------------------------------------------->
 </ul>
 <!-------------------------------------------------------->
 <B><FONT SIZE=+1 color=brown>Scientific Committees</FONT></B>
 <ul>
   <!--------------------------------------------------------->
   <!----------------------------------------------------------->
-  <li>Co-Chair, Executive (Programme) Committee,
-  <a href="https://mega.sciencesconf.org/resource/page/id/6"></a> MEGA 2024, Leipzig,
-  Germany, 29 July&ndash;2 August 2024.
+  <li>
+    Member, Executive (Programme) Committee,
+  <a hre="https://mega.sciencesconf.org/resource/page/id/6"></a> MEGA 2026, Durham, England, 6 &ndash; 10 July 2026.
   </li>
   <!---------------------------------------------------------------------------------------------------->
  <li>
@@ -197,6 +203,12 @@
 <B><FONT SIZE=+1 color=brown>Conference Organization </FONT></B>
  
  <ul> 
+  <!----------------------------------------------------------->
+  <li>Co-Chair, Executive (Programme) Committee,
+  <a href="https://mega.sciencesconf.org/resource/page/id/6"></a> MEGA 2024, Leipzig,
+  Germany, 29 July&ndash;2 August 2024.
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
  <!--------------------------------------------------------->
  <li>
    ICERM Hot Topics Workshop on <a href="https://icerm.brown.edu/events/htw-23-agst/">Algebraic Geometry in Spectral Theory</a>,
@@ -314,18 +326,6 @@
 <B><FONT SIZE=+1 color=brown>Current Advisees</FONT></B>
 
 <dl>
- <dd>
-   <A HREF="https://mattfaust.github.io">Matthew Faust</a>, TAMU Graduate Student.
- </dd>
- <!------------------------------------------------------------------>
- <dd>
-    <A HREF="https://cbott2.github.io/">C.J. Bott</a>, TAMU Ph.D.  Student.
- </dd>
- <!------------------------------------------------------------------>
- <dd>
-    <A HREF="https://jordylopez27.github.io/">Jordy Lopez-Garc&iacute;a</a>, TAMU Ph.D. Student.
- </dd>
- <!------------------------------------------------------------------>
  <!------------------------------------------------------------------>
  <dd>
     <A HREF="https://jordylopez27.github.io/"></a>Somak Dutta, TAMU Ph.D. Student.
@@ -336,16 +336,22 @@
     <A HREF="https://jordylopez27.github.io/"></a>Ruzho Sagayaraj, TAMU Ph.D. Student.
  </dd>
  <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <dd>
+    <A HREF="https://jordylopez27.github.io/"></a>Daniel Dale, TAMU Ph.D. Student.
+ </dd>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <dd>
+    <A HREF="https://jordylopez27.github.io/"></a>John Ajayi, TAMU Ph.D. Student.
+ </dd>
+ <!------------------------------------------------------------------>
+ <!------------------------------------------------------------------>
+ <dd>
+    <A HREF="https://jordylopez27.github.io/"></a>Khashayar Neshat Taherzadeh,  TAMU Ph.D. Student.
+ </dd>
+ <!------------------------------------------------------------------>
 
- <br>
-<!--------------------------------------------------------->
-  <dd>
-    Merri Stillman,  TAMU Master&apos;s Student.
- </dd>
- <!---------------------------------------------------------------------------------------------------->
-  <dd>
-    Jonah Robinson,  TAMU Master&apos;s Student.
- </dd>
  </dl>
   
 </td>
@@ -358,7 +364,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Mon Feb 05 06:01:30 GMT 2024 by sottile</p>  
+<p>Last modified: Sun Nov 09 03:01:30 CST 2025 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
