--- a/talks.html
+++ b/talks.html
@@ -142,7 +142,7 @@
    </li>
   <!---------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
-  <li> <FONT COLOR="AA00FF"><I>TBA</I></font>,
+  <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
     <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Blue</a>, <!-- Intermediate</a>,-->
      22 November 2025. <a href="talks/24/Five-color.txt"></a>
   </li>
@@ -155,6 +155,12 @@
     <a href="talks/25/ICERM.txt">abstract</a>
  </li>
   <!---------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The critical point degree of a periodic graph</I></font>,
@@ -166,12 +172,6 @@
     <a href="talks/25/StLouis.pdf">text of talk</a>.
   </li>
   <!---------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
-  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
     <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Red</a> <!--Advanced</a>,-->
