--- a/HUR/index.html
+++ b/HUR/index.html
@@ -15,6 +15,12 @@
 <!---------------------------------------------------------------------------------------------------->
 <HR>
 <!---------------------------------------------------------------------------------------------------->
+<ul>
+  <li> <a href="https://sites.google.com/tamu.edu/tamumathclub/">Texas A&amp;M Math Club</a>.  </li>
+</ul>
+<!---------------------------------------------------------------------------------------------------->
+<HR>
+<!---------------------------------------------------------------------------------------------------->
 <FONT color=brown><b>Upcoming events</b></font>
 
 <ul>
