--- a/research/collaborators.html
+++ b/research/collaborators.html
@@ -25,22 +25,23 @@ I have had the good fortune to work with the following mathematicians.
   circ       Vapourware only  
   cyan       One paper      
   green      Two papers       
-  blue       Three papers  <Lauve>
-                           <Vakil>
-                           <Verschelde>
+  blue       Three papers  <Faust>
+                           <Lauve>
                            <Lenart>
                            <Ruffo>
                            <Soprunova>
+                           <Vakil>
+                           <Verschelde>
   red        Four papers   <Aguiar>
-                           <Teitler>
                            <Bates>
+                           <Sturmfels>
+                           <Teitler>
                            <Yahl>
                            <Zelenko>
-                           <Sturmfels>
-                           <Theobald>
  orange     Five papers    <Garcia-Puente>
-                           <Rodriguez>
                            <Hillar>                           
+                           <Rodriguez>
+                           <Theobald>
   pink       Six papers    <Leykin>
                            <Nisse>
   brown      Seven papers  <Bihan> 
@@ -205,10 +206,10 @@ I have had the good fortune to work with the following mathematicians.
     <A HREF="http://www.loria.fr/~everett/">Hazel Everett</A><sup>&#134;</sup>,
      LORIA - Universit&eacute; de Nancy 2, France. 
  
-<!-- BlochDeg 2022  SECVC 2025      CPDeg Bestiary Dirac Toric-Fermi -->
-<dd><IMG SRC="images/dots/two.png">
+<!-- BlochDeg 2022  SECVC 2025 CPDeg 2025      Bestiary Dirac Toric-Fermi -->
+<dd><IMG SRC="images/dots/three.png">
     <A HREF="https://mattfaust.github.io">Matthew Faust</A>,
-     Texas A&amp;M University.
+     Michigan State University.
 
 <!-- MSym 2010  CCC 2012 -->
 <dd><IMG SRC="images/dots/two.png">
@@ -223,8 +224,7 @@ I have had the good fortune to work with the following mathematicians.
 
 <!-- LPPP 2010  MMCS 2010  experiment 2010  toric 2011  secant 2012-->
 <dd><IMG SRC="images/dots/five.png">
-   <A HREF="http://www.shsu.edu/~ldg005">Luis Garc&iacute;a-Puente</A>, Sam Houston State
-   University, Huntsville, Texas.
+   <A HREF="https://luisgarciapuente.github.io/">Luis Garc&iacute;a-Puente</A>, Colorado College.
 
 <!-- Santalo 2006-->
 <dd><IMG SRC="images/dots/one.png">
@@ -366,8 +366,8 @@ I have had the good fortune to work with the following mathematicians.
 <dd><IMG SRC="images/dots/one.png">
     <A HREF="http://www.matthewniemerg.com">Matt Niemerg</a>,   IBM.
 
-<!-- phaselimit 2013  nonarchimedean 2014  convexity 2014  tconvex 2014  Describing 2018
-      Discriminant 2024   HigherOrder ????-->
+<!-- phaselimit 2013   nonarchimedean 2014  convexity 2014  tconvex 2014 
+      Describing 2018  Discriminant 2024   HigherOrder ????-->
 <dd><IMG SRC="images/dots/six.png">
      <a href="https://sites.google.com/site/mounirnisse1/">Mounir Nisse</a>, Xiamen University Malaysia.
 
@@ -428,9 +428,9 @@ I have had the good fortune to work with the following mathematicians.
     <A HREF="http://www.math.uiuc.edu/~reznick/">Bruce Reznick</A>,
     University of Illinois at Urbana-Champaign. 
 
-<!-- CPDeg Bestiary  -->
-<dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF=""></a>Jonah Robinson, University of Michigan.
+<!-- CPDeg 2025      Bestiary  -->
+<dd><IMG SRC="images/dots/one.png">
+    <A HREF="https://jonah-robinson.github.io/">Jonah Robinson</a>, University of Michigan.
 
 <!-- Grothendieck 2006 -->
 <dd><IMG SRC="images/dots/one.png">
@@ -525,7 +525,7 @@ I have had the good fortune to work with the following mathematicians.
    State, Idaho.
   
 <!-- spheres 2002  2l2s 2003  realquad 2005  Snowbird 2008  daag 2019?-->
-<dd><IMG SRC="images/dots/four.png">
+<dd><IMG SRC="images/dots/five.png">
     <A HREF="http://www.math.uni-frankfurt.de/~theobald/">Thorsten Theobald</A>, 
   J.W. Goethe-Universit&auml;t Frankfurt
 
@@ -598,8 +598,8 @@ I have had the good fortune to work with the following mathematicians.
     of Illinois.
 
 <!--  Increasing 2025 -->
-<dd><IMG SRC="images/dots/vapourware.png">
-    <A HREF="http://www.math.uiuc.edu/~ayong/"></a>Tianyi Yu, UQAM.
+<dd><IMG SRC="images/dots/One.png">
+    <A HREF="https://tianyi-math.github.io/">Tianyi Yu</a>, UQAM.
 
 <!-- Mod4 2012  Newmodfour 2014  Injectivity 2017  GenWronski 2020 -->
 <dd><IMG SRC="images/dots/four.png">
