--- a/talks.html
+++ b/talks.html
@@ -136,11 +136,28 @@
   <!---------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>TBA</I></font>, 
+    <FONT COLOR="AA00FF"><I>Toric Geometry of Periodic Operators</I></font>, 
     <a href="http://mate.dm.uba.ar/~coalaga/">Computational Algebra, Algebraic Geometry and Applications II</a>,
-      Buenos Aires, Argentina, December 15 &ndash; 17 2025.
+    Buenos Aires, Argentina, December 15 &ndash; 17 2025.
+    <a href="talks/25/MateMax.txt">abstract</a>.
    </li>
   <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Webs and Maximally Inclected Curves?</I></font>,
+    Poster session, 
+    <a href="https://icerm.brown.edu/program/semester_program_workshop/tw-25-wagtc">Webs in Algebra, Geometry,
+      Topology and Combinatorics</a>,
+    ICERM, Providence, RI, 8 &ndash; 12 December 2025.
+    <a href="talks/25/Webs.txt">abstract</a>.   <a href="talks/25/Webs.pdf">Poster</a>.
+   </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
     <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Blue</a>, <!-- Intermediate</a>,-->
@@ -155,12 +172,6 @@
     <a href="talks/25/ICERM.txt">abstract</a>
  </li>
   <!---------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
-  <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>The critical point degree of a periodic graph</I></font>,
