--- a/HUR/index.html
+++ b/HUR/index.html
@@ -23,13 +23,19 @@
 <!---------------------------------------------------------------------------------------------------->
 <FONT color=brown><b>Upcoming events</b></font>
 
+  
+
 <ul>
 <!---------------------------------------------------------------------------------------------------->
-  <li>
-    Undergraduate Research Symposium, Monday October 6, 2025.   Elevator lobby, Second floor of Blocker.
-    <a href="URS_25.html">Presenters and Abstracts</a>.
-  </li>
+<li>
+  The 9th TX-LA (LSU/UH/TAMU)
+  <a href="https://sites.google.com/view/26-tx-la-umc">Undergraduate Mathematics  Conference</a>.
+  April 11-12 2025, Lousiana State University.
+  Registration ends on March 26 and may be done at
+  <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=P61NLa5Q2UeDoJrisfRm-GuUyu-O-bREnBqwHXPDKBlUNTUyVEs0NDVJVUc4RkhPMzczV1pXMjI0Mi4u">this page</a>.  
+</li>
 <!---------------------------------------------------------------------------------------------------->
+
 </ul>
 
 
@@ -40,6 +46,14 @@
 <FONT color=brown><b>Past events</b></font>
 
 <ul>
+  
+<!---------------------------------------------------------------------------------------------------->
+  <li>
+    Undergraduate Research Symposium, Monday October 6, 2025.   Elevator lobby, Second floor of Blocker.
+    <a href="URS_25.html">Presenters and Abstracts</a>.
+  </li>
+<!---------------------------------------------------------------------------------------------------->
+  
 <!---------------------------------------------------------------------------------------------------->
   <li>
     Undergraduate Research Symposium, Thursday October 24, 2024.   Elevator lobby, Second floor of Blocker.
