--- a/teaching/index.html
+++ b/teaching/index.html
@@ -15,14 +15,25 @@
  <DD><B>Texas A&amp;M University</B>
   <UL>
 
-    <li><B><font color="9900FF">Fall 2025</font></B><br>
-      <a href="25.2/653d.html"></a>Math 653: Algebra I.
+
+    <li><B><font color="9900FF">Spring 2026</font></B><br>
+      <a href="26.1/648.html">Math 648</a>: Computational Algebraic Geometry.
              <!--  students--><br>
    <!--      Math 691, Section 605, Research. <br>
       Credit Hours: Bott (9), -->
 
-      <br><br>
-     <li><B><font color="9900FF">Summer 2025</font></B><br>
+      <br><br>  </li>
+
+    <li><B><font color="9900FF">Fall 2025</font></B><br>
+      <a href="25.2/653.html">Math 653: Algebra I</a>.
+             <!--  students--><br>
+   <!--      Math 691, Section 605, Research. <br>
+      Credit Hours:, -->
+
+      <br><br>  </li>
+
+
+    <li><B><font color="9900FF">Summer 2025</font></B><br>
       <!--  Math 691, Sections 102, and 201, Research. <br>
       <!--   15 Credit Hours: Sagayarai (6),  Lopez-Garcia (3), Dutta (6) -->
       <!--  Math 691, Full Sections 103,  Research. <br>
