--- a/index.html
+++ b/index.html
@@ -101,11 +101,7 @@
   <TR valign=top>
     <td colspan=2><b>News:</b>
 
-     Ph.D. students Christopher (CJ) Bott and Jordy Cheyem Lopez-Garc&iacute;a both recently defended their Theses and are
-      on their way to postdocs at Brigham Young and Notre Dame, respectively.      
-     <br>
-      
-      I was recently elected as a
+      I was elected as a
       <a href="https://www.siam.org/publications/siam-news/articles/siam-announces-2025-class-of-fellows/">member of the
 	2025 class of Fellows of the SIAM</a>, and as a
       <a href="https://www.aaas.org/programs/fellows/2024-aaas-fellows">member of the 2024 class of Fellows of the American
