--- a/teaching.html
+++ b/teaching.html
@@ -157,28 +157,31 @@
       <td colspan=1> Tu-Th </td><td> 12:45&ndash;14:00</td><td> Blocker 121
       </td>
     </tr>
-     <!-------------------------------------------------->
+     <!--------------------------------------------------
     <tr valign=top><td colspan=4 rowspan=1><font color=blue><b>Office Hours:</b></font> &nbsp; Blocker 601L </td><td></td>
-   </tr>
-    <!-------------------------------------------------->
+   </tr>-------------------------------------------------->
+    <!--------------------------------------------------
     <tr><td colspan=3>  Mondays &amp;  Tuesdays </td> <td colspan=2>14:00-15:00 </td> 
-    <!-------------------------------------------------->
-    <!-------------------------------------------------->
-   <tr><td colspan=2> Also, by Appointment</td></tr>
+    -------------------------------------------------->
+    <!--------------------------------------------------
+	<tr><td colspan=2> Also, by Appointment</td></tr>  -------------------------------------------------->
+	
    <tr><td colspan=4><hr></td></tr>
-    <!-------------------------------------------------->
+
    <tr valign=top>
      <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
+     <!----
      <td colspan=2><a target="_blank" href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
     </tr>
-    <!-------------------------------------------------->
-     <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
+    -------------------------------------------------->
+<!--     <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
       <td colspan=2 >15:00&ndash;16:00</td>
       <td>  </td></tr>
-    <!-------------------------------------------------->
+    --------------------------------------------------
      <tr><td> Wednesday </td><td>17:00-18:00 </td> </tr>
-    <!-------------------------------------------------->
-<!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
+    -------------------------------------------------->
+     <!-- -->
+    <tr><td>By appointment </td><td>email Sottile </td> </tr>
   <!---------------------------------------------------------------------------------------------------->
   </table>
   <!---------------------------------------------------------------------------------------------------->
