--- a/talks.html
+++ b/talks.html
@@ -120,13 +120,29 @@
   <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Algebra seminar,
+    Michigan State Univertsity, 11 March 2026.
+    <a href="talks/26/JMM_Kurlin.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <li> 
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Mathematical Physics and Operator Algebras seminar,
+    Michigan State Univertsity, 10 March 2026.
+    <a href="talks/26/JMM_Kurlin.txt"></a>
+  </li>
+  <!---------------------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------------------->
+  <li> 
     <FONT COLOR="AA00FF"><I>Algebraic geometry of periodic graph operators</I></font>,
     AMS Special Session on  Open Problems in Geometric Data Science,
     Joint Mathematics Meetings, 4&ndash;7 January 2026, Washington, DC.
     <a href="talks/26/JMM_Kurlin.txt">abstract</a>
   </li>
   <!---------------------------------------------------------------------------------------------------->
-   <!---------------------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
   <li> 
     <FONT COLOR="AA00FF"><I>Families of graphs satisfying the spectral edges conjecturess</I></font>,
     AMS Special Session on  Spectral Theory of Discrete and Continuous Sch&ouml;dinger Operators,
@@ -139,9 +155,15 @@
     <FONT COLOR="AA00FF"><I>Toric Geometry of Periodic Operators</I></font>, 
     <a href="http://mate.dm.uba.ar/~coalaga/">Computational Algebra, Algebraic Geometry and Applications II</a>,
     Buenos Aires, Argentina, December 15 &ndash; 17 2025.
-    <a href="talks/25/MateMax.txt">abstract</a>.
+    <a href="talks/25/MateMax.txt">abstract</a>. <a href="talks/25/MateMax.pdf">Text of talk</a>.
    </li>
   <!---------------------------------------------------------------------------------------------------->
+  <!--------------------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!--------------------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Webs and Maximally Inclected Curves?</I></font>,
@@ -152,12 +174,6 @@
     <a href="talks/25/Webs.txt">abstract</a>.   <a href="talks/25/Webs.pdf">Poster</a>.
    </li>
   <!---------------------------------------------------------------------------------------------------->
-  <!--------------------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
-  <!--------------------------------------------------------------------------------------------------->
   <!--------------------------------------------------------------------------------------------------->
   <li> <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
     <a href="https://mathcircle.tamu.edu/">TAMU Math Circle&ndash;Blue</a>, <!-- Intermediate</a>,-->
