--- a/index.html
+++ b/index.html
@@ -178,44 +178,24 @@
       <td><a href="teaching/26.1/648.html">Computational Algebraic Geometry</a></td>
       <td colspan=1> Tu-Th </td><td> 15:55&ndash;17:10</td><td> Blocker 121
       </td>
-    </tr>
+    </tr> 
    <!---------------------------------------------------------------------------------------------------->
-   </table>
-  <!---------------------------------------------------------------------------------------------------->
-  <hr>
-  <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Fall 2025</font></b>
-   <table border=0>
+   <tr><td colspan=5><hr></td></tr>
    <!---------------------------------------------------------------------------------------------------->
-    <tr valign=top><td><font color=brown>MATH 653</font>&nbsp;</td>
-      <td><a href="teaching/25.2/653.html">Algebra I</a></td>
-      <td colspan=1> Tu-Th </td><td> 12:45&ndash;14:00</td><td> Blocker 121
-      </td>
-    </tr>
-     <!-------------------------------------------------->
-    <tr valign=top><td colspan=4 rowspan=1><font color=blue><b>Office Hours:</b></font> &nbsp; Blocker 601L </td><td></td>
-   </tr>
-    <!-------------------------------------------------->
-    <tr><td colspan=3>  Mondays &amp;  Tuesdays </td> <td colspan=2>14:00-15:00 </td> 
-    <!-------------------------------------------------->
-    <!-------------------------------------------------->
-   <tr><td colspan=2> Also, by Appointment</td></tr>
-   <tr><td colspan=4><hr></td></tr>
-    <!-------------------------------------------------->
    <tr valign=top>
      <td colspan=3><font color=blue><b>Honors Advising:</b> Bloc 601L</font></td>
      <td colspan=2><a target="_blank" href="https://tamu.campus.eab.com/pal/SzblDjOLD-">Schedule appointment</a></td> 
     </tr>
     <!-------------------------------------------------->
-     <tr valign=top><td colspan=2>Tuesdays  &amp; Thursdays </td>
-      <td colspan=2 >17:00&ndash;18:00</td>
+     <tr valign=top><td colspan=2>TBA</td>
+      <td colspan=2 ></td>
       <td>  </td></tr>
     <!-------------------------------------------------->
-     <tr><td> Wednesday </td><td>15:00-16:00 </td> </tr>
+     <tr><td> TBA </td><td> </td> </tr>
     <!-------------------------------------------------->
 <!--     <tr><td> </td><td>17:00-18:00 </td> </tr>-->
     <!---------------------------------------------------------------------------------------------------->
-  </table>
+   </table>
   <!---------------------------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
@@ -230,13 +210,13 @@
      <td>Mondays 3:00&ndash;3:50&nbsp;&nbsp;</td>
      <td>Blocker 302</td>
    </tr>
-      <tr> <td>&nbsp;</td>
+ <!--     <tr> <td>&nbsp;</td>
      <td><a href="https://www.math.tamu.edu/seminars/cag/"></a>Combinatorial Algebraic Geometry
      </td>
      <td width=30></td>
      <td>Thursdays  11:00&ndash;12:00</td>
      <td>Blocker 605AX</td>
-   </tr>
+   </tr> -->
    </tr>
       <tr> <td>&nbsp;</td>
      <td><a href="https://calendar.google.com/calendar/u/0/embed?src=c_086b4d5be2e592c7ee26dc818975ae39bef8b677f4f1fa6077bdc213b57073fc@group.calendar.google.com&ctz=America/Chicago">MPHA</a>
@@ -424,7 +404,7 @@ pageTracker._trackPageview();
  </tr>
 </table>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Sep 18 18:21:38 CDT 2025 by sottile</p>  
+<p>Last modified: Sun Dec 21 18:21:38 CST 2025 by sottile</p>  
  </body>
 </html> 
 
