--- a/HUR/URS_25.html
+++ b/HUR/URS_25.html
@@ -7,7 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </HEAD>
 <!---------------------------------------------------------------------------------------------------->
-<h2>2025 Mathematics Undergraduate Research Sympoisum</h2>
+<h2><font color=maroon>2025 Mathematics Undergraduate Research Sympoisum</font></h2>
 <!---------------------------------------------------------------------------------------------------->
 
 This is a yearly event at which Texas A&amp;M undergraduate students present their REU work in an informal evening poster
@@ -19,16 +19,16 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 <!---------------------------------------------------------------------------------------------------->
 <table>
   <tr>
-    <td><FONT color=brown><b>Date:</b></font></td>  <td>Monday, 6 October 2025</td>
+    <td><FONT color=maroon><b>Date:</b></font></td>  <td>Monday, 6 October 2025</td>
   </tr>
   <tr>
-    <td><FONT color=brown><b>Time:</b></font></td>  <td>6:00&mdash;7:30 PM</td>
+    <td><FONT color=maroon><b>Time:</b></font></td>  <td>6:00&mdash;7:30 PM</td>
   </tr>
   <tr>
-    <td><FONT color=brown><b>Place:&nbsp;</b></font></td>  <td>Second Floor, Blocker Building</td>
+    <td><FONT color=maroon><b>Place:&nbsp;</b></font></td>  <td>Second Floor, Blocker Building</td>
   </tr>
   <tr>
-    <td><FONT color=brown><b>Organizer:&nbsp;</b></font></td>
+    <td><FONT color=maroon><b>Organizer:&nbsp;</b></font></td>
     <td><A HREF="../index.html">Frank Sottile</a>, &nbsp; with assistance from LaKortney Hyson</td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
@@ -40,7 +40,7 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 
 
 
-<FONT SIZE=+1 color=brown><b>Presenters:</b>  </font>
+<FONT SIZE=+1 color=maroon><b>Presenters:</b>  </font>
 <!---------------------------------------------------------------------------------------------------->
 <table border=0>
   <tr>
@@ -103,7 +103,7 @@ Pizza and refreshments will be provided, and the symposium is co-sponsored by th
 <!---------------------------------------------------------------------------------------------------->
 
 
-<FONT SIZE=+1 color=brown><b>Abstracts:</b>  </font>
+<FONT SIZE=+1 color=maroon><b>Abstracts:</b>  </font>
 <!---------------------------------------------------------------------------------------------------->
 <table border=0>
   
