--- a/HUR/index.html
+++ b/HUR/index.html
@@ -21,6 +21,12 @@
 <!---------------------------------------------------------------------------------------------------->
 <HR>
 <!---------------------------------------------------------------------------------------------------->
+<font color=maroon><b>News:</b></font>
+Texas A&amp;M Computer Science and Applied Mathematics Senior Montgomery Bohde was selected as a 2026 Churchill Scholar.
+He is the first every Churchill Scholar from Texas A&amp;M University.
+<!---------------------------------------------------------------------------------------------------->
+<HR>
+<!---------------------------------------------------------------------------------------------------->
 <FONT color=brown><b>Upcoming events</b></font>
 
   
@@ -33,6 +39,12 @@
   April 11-12 2025, Lousiana State University.
   Registration ends on March 26 and may be done at
   <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=P61NLa5Q2UeDoJrisfRm-GuUyu-O-bREnBqwHXPDKBlUNTUyVEs0NDVJVUc4RkhPMzczV1pXMjI0Mi4u">this page</a>.  
+</li>
+<!---------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------->
+<li>
+  TAMU undergraduate students at the 2026 Joint Mathematical Meetings in Washington DC
+  <a href="JMM_26.html">Details</a>.
 </li>
 <!---------------------------------------------------------------------------------------------------->
 
