--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
   <!---------------------------------------------------------------------------------------------------->
   <hr>
   <!---------------------------------------------------------------------------------------------------->
-   <b><FONT SIZE=+1 color=brown>Winter 2026</font></b>
+   <b><FONT SIZE=+1 color=maroon>Winter 2026</font></b>
    <table border=0>
    <!---------------------------------------------------------------------------------------------------->
-    <tr valign=top><td><font color=brown>MATH 648</font>&nbsp;</td>
+    <tr valign=top><td><font color=maroon>MATH 648</font>&nbsp;</td>
       <td><a href="teaching/26.1/648.html">Computational Algebraic Geometry</a></td>
       <td colspan=1> Tu-Th </td><td> 15:55&ndash;17:10</td><td> Blocker 121
       </td>
@@ -201,7 +201,7 @@
   <!---------------------------------------------------------------------------------------------------->
   <table>
     <tr>
-     <td colspan=2><b><FONT SIZE=+1 color=brown>Seminars:</font></b>
+     <td colspan=2><b><FONT SIZE=+1 color=maroon>Seminars:</font></b>
     </td></tr>
    <tr> <td>&nbsp;</td>
      <td><a href="https://tamu-seminar.github.io/geometry/">Geometry</a> 
@@ -246,14 +246,14 @@
  <!------------------------------------------------------------->
   <hr>
  <!---------------------------------------------------------------------------->
-   <B><FONT SIZE=+1 color=brown>For Potential Students:</FONT></B>
+   <B><FONT SIZE=+1 color=maroon>For Potential Students:</FONT></B>
      I am always looking for students interested in working with me.
      Feel free to come and talk with me, look at the resources on these pages,
      including this <a href="advising/advising.html">information page</a>.
    <!---------------------------------------------------------------------------->
   <hr> 
    <!---------------------------------------------------------------------------->
-   <a href="research/index.html"><B><FONT SIZE=+1 color=brown>Research
+   <a href="research/index.html"><B><FONT SIZE=+1 color=maroon>Research
     Interests:</FONT></B></a> 
     Numerical algebraic geometry, applications of algebraic geometry, algebraic geometry in spectral theory,
     real algebraic geometry,
@@ -262,14 +262,14 @@
    <!---------------------------------------------------------------------------->
  <!--  <hr> -->
    <!---------------------------------------------------------------------------->
- <!--   <B><FONT SIZE=+1 color=brown>TAMU Math Circle:</FONT></B>
+ <!--   <B><FONT SIZE=+1 color=maroon>TAMU Math Circle:</FONT></B>
     <a href="http://www.science.tamu.edu/articles/978">Article</A> 
     on the <a href=" http://mathcircle.tamu.edu/">TAMU Math Circle</a>
     by the College of Science. -->
    <!---------------------------------------------------------------------------->
    <hr>
    <!---------------------------------------------------------------------------->
-    <B><FONT SIZE=+1 color=brown>Letters of Recommendation</FONT></B>
+    <B><FONT SIZE=+1 color=maroon>Letters of Recommendation</FONT></B>
      I am willing to write letters for deserving candidates, but please read 
      <a href="service/letters.html">this</a> before asking me for a letter.
    <!---------------------------------------------------------------------------->
