--- a/teaching/26.1/648.html
+++ b/teaching/26.1/648.html
@@ -11,7 +11,7 @@
 <table>
  <tr valign=center>
   <td>
-   <img src="../../talks/05/Shapiro.gif"> &nbsp; &nbsp;
+   <img src="../../talks/05/Shapiro.gif" alt="Failure of Shapiro Conjecture for Fl(2,3;4)"> &nbsp; &nbsp;
   </td>
   <td>
    <H1>Math 648: Computational Algebraic Geometry</h1> 
@@ -31,6 +31,9 @@
        Graduate algebra or permission of instructor.
        This may be taken concurrently with Math 654.<br>
     
+  </td>
+  <td>
+   <img src="HexWeb.gif" alt="Web for a maximally inflected quintic plane curve"> &nbsp; &nbsp;
   </td>
  </tr>
 </table>
@@ -93,13 +96,14 @@ in lieu of a final exam.   Grading will be based on final projects and
 some written/computer work through the term.<br>
 
   
- <font size=+1 color=brown><b>Textook:</b></font><br>
-  There is no textbook, but I will supply some notes that I have developed for the course<br>
-    <a href="Chapters/Ch1.pdf"></a> The Algebraic-Geometric Dictionary<br>
-       <a href="Chapters/Ch2.pdf"></a> symbolic computation. <br>
-       <a href="Chapters/Ch3.pdf"></a> Properties of Varieties.<br>
-       <a href="Chapters/Ch4.pdf"></a> on Numerical Algebraic Geometry.<br>
-
+ <font size=+1 color=brown><b>Textook:</b></font> &nbsp; 
+  There is no textbook, but I will supply some notes that I have developed for the course:
+ <ul>
+   <li><a href="Chapters/Ch1.pdf"></a> The Algebraic-Geometric Dictionary</li>
+   <li><a href="Chapters/Ch2.pdf"></a> symbolic computation. </li>
+   <li><a href="Chapters/Ch3.pdf"></a> Properties of Varieties.</li>
+   <li><a href="Chapters/Ch4.pdf"></a> on Numerical Algebraic Geometry.</li>
+ </ul>
   You are also welcome to get your hands on the the award-winning
   <font color=AA00FF><i>Ideals, Varieties, and Algorithms</i></font> by David Cox, John Little, and Donal O'Shea.
   In particular it contains all the algebraic preliminaries, and is a great resource.
@@ -112,6 +116,6 @@ some written/computer work through the term.<br>
 <!---------------------------------------------------------------------------->
 <address></address>
 <i><font color="AA00AA">
-<!-- hhmts start -->Last modified: Tu Nov  4  9:34:21 CST 2025 <!-- hhmts end -->
+<!-- hhmts start -->Last modified: Th Jan 1  9:13:37 CST 2026 <!-- hhmts end -->
 </i></font>
 </body> </html>
